# CORAL

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
coral/: _version.py  config.py
coral/agent/: manager.py
coral/agent/builtin/: claude_code.py  codex.py  kiro.py  opencode.py
coral/cli/: __init__.py  _helpers.py  start.py
coral/gateway/: middleware.py
coral/grader/: loader.py
coral/hub/: heartbeat.py  notes.py
coral/hub/prompts/: consolidate.md  reflect.md
coral/web/: api.py
coral/web/static/: index.html
coral/workspace/: project.py  repo.py  worktree.py
docker/claude/: Dockerfile  entrypoint.sh
docker/codex/: Dockerfile  entrypoint.sh
docker/opencode/: Dockerfile  entrypoint.sh
examples/ADRS/cloudcast/: task.yaml
examples/ADRS/eplb/: task.yaml
examples/ADRS/llm_sql/: task.yaml
examples/circle_packing/: litellm_vllm.yaml  task.yaml  task_ttt.yaml
examples/erdos/: task.yaml
examples/kernel_builder/: task.yaml
examples/mnist/: task.yaml  task_codex.yaml
examples/parameter_golf/: task.yaml
examples/spaceship_titanic/: task.yaml
examples/stanford_covid_vaccine/: task.yaml
experiments/multiagent_analysis/: EXPERIMENT_PLAN.md  FINDINGS.md  PAPER_DRAFT.md  README.md  analyze_gains.py  counterfactual_analysis.py  cross_task_analysis.py  deep_report.py  generate_curves.py  mechanistic_analysis.py  quick_report.py  run_all.sh  technique_analysis.py
tests/: test_config.py
ttt/: EXPERIMENT_REPORT.md  README.md  SLIME_README.md  collect_claude.sh  cooperative.py  coral_api_server.py  coral_rollout.py  coral_trainer.py  diverse.py  evolve.py  generator.py  grpo_r3.py  grpo_train.py  pipeline.py  run.sh  run_coral_rl.sh  run_docker_slime.sh  run_pipeline.sh  run_slime.sh  run_slime_ttt.sh  run_ttt_loop.sh  slime_rollout.py  train.py  train.sh  trainer.py
ttt/docker/: Dockerfile  entrypoint.sh
web/: package-lock.json
(+1175 files in other folders)
